--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "wrangler": "^4.33.0"
   },
   "scripts": {
+    "vercel-build": "npm install --legacy-peer-deps && npm run build"
     "build": "tsc -b && vite build",
     "cf-typegen": "wrangler types",
     "check": "tsc && vite build && wrangler deploy --dry-run",
