Fix lint script formatting in package.json

--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "cf-typegen": "wrangler types",
     "check": "tsc && vite build && wrangler deploy --dry-run",
     "dev": "vite",
-    "lint": "eslint ."
+    "lint": "eslint .",
     "scripts": {
     "vercel-build": "npm install --legacy-peer-deps && npm run build"
 }
