Refactor vercel.json by removing functions and updating rewrites
Removed function configuration and updated rewrite rules.

--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,7 @@
 {
-  "functions": {
-    "src/worker/index.ts": {
-      "runtime": "edge"
-    }
-  },
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "/src/worker/index.ts"
-    },
-    {
-      "source": "/((?!api/).*)",
+      "source": "/(.*)",
       "destination": "/index.html"
     }
   ]
