--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,11 @@
 {
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/api/:path*",
+      "destination": "/api/index.ts"
+    },
+    {
+      "source": "/:path*",
       "destination": "/index.html"
     }
   ]
